restructuring and end of refreshers

--- a/1-python-refresher/1 - Python Refresher.ipynb
+++ b/1-python-refresher/1 - Python Refresher.ipynb
@@ -1209,7 +1209,13 @@
    "id": "a8d1899f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "student = {\n",
+    "    {},\n",
+    "    {},\n",
+    "    {}\n",
+    "}"
+   ]
   }
  ],
  "metadata": {
