time complexity + sorting - 2

--- a/5-time-complexity_sorting/1 - Intro to Time Complexity and Bubble Sort.ipynb
+++ b/5-time-complexity_sorting/1 - Intro to Time Complexity and Bubble Sort.ipynb
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 8,
    "id": "3b6d0236",
    "metadata": {},
    "outputs": [],
@@ -365,7 +365,7 @@
     "def optimised_bubble_sort(a):\n",
     "    for i in range(len(a)):\n",
     "        is_sorted = True\n",
-    "        for j in range(i, len(a)-1):\n",
+    "        for j in range(len(a)-i-1):\n",
     "            if a[j] > a[j+1]:\n",
     "                a[j], a[j+1] = a[j+1], a[j]\n",
     "                is_sorted = False\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 9,
    "id": "cb3a71a3",
    "metadata": {},
    "outputs": [],
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 10,
    "id": "de72679c",
    "metadata": {},
    "outputs": [],
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 11,
    "id": "512462bf",
    "metadata": {},
    "outputs": [
@@ -411,7 +411,7 @@
        "[1, 2, 3, 4, 5, 7]"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -422,8 +422,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "7b3c125e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = [5,4,2,1,7,3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "51173e6e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 5, 7]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "optimised_bubble_sort(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e89e0eea",
    "metadata": {},
    "outputs": [],
    "source": []
