--- a/5-time-complexity_sorting_recursion/3 - Recursion and Merge Sort Implementation.ipynb
+++ b/5-time-complexity_sorting_recursion/3 - Recursion and Merge Sort Implementation.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f5d8243f",
+   "id": "836382c9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "8eaf161b",
+   "id": "34b753f1",
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f36258fc",
+   "id": "5550ef30",
    "metadata": {},
    "source": [
     "## Merge Sort"
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "d28c23ff",
+   "id": "a57dc3f9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "83d23878",
+   "id": "08fc058c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "1028e412",
+   "id": "b10855f5",
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "276704bd",
+   "id": "17fa6a4f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "4cc866e0",
+   "id": "0320e5fb",
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "d6a04b53",
+   "id": "a351a800",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +198,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "3c472e9a",
+   "id": "8f0cca59",
    "metadata": {},
    "outputs": [
     {
@@ -218,8 +218,91 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 37,
+   "id": "8db73b3f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = [1,2,3,4,5,6]\n",
+    "b = []\n",
+    "for i in range(len(a)-1):\n",
+    "    b.append(a.pop(0))\n",
+    "    c = a.pop(0)\n",
+    "    a.append(c)\n",
+    "b.append(a[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "1a44bbf8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 3, 5, 2, 6, 4]"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "9e54a019",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solve(a):\n",
+    "    if len(a) == 1:\n",
+    "        return a\n",
+    "    \n",
+    "    result = a[::2]\n",
+    "    return result + solve(a[1::2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "088b7333",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = [1,2,3,4,5,6]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "f8130fc6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 3, 5, 2, 6, 4]"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "solve(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "f2e68498",
+   "id": "67622826",
    "metadata": {},
    "outputs": [],
    "source": []
